--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: jordangrapes@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   My software projects and other stuff.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://picklenerd.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  picklenerd
 
 # Build settings
